2008-08-31  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Chorus2/Chorus2.cpp:
	  Rename more.

	* FSM/Makefile.am:
	  Build both.
	  

2008-08-31  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Chorus/Chorus.cpp:
	* FSM/Chorus2/Makefile.am:
	* FSM/Chorus2/Chorus.cpp:
	* FSM/Chorus2/Chorus2.cpp:
	  Add original Chorus and rename new to Chorus2.

2008-06-23  Krzysztof Foltman  <kfoltman@users.sf.net>

	* common/dsplib.h:
	  Change calling convention so that function arguments are
	  passed correctly.

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* common/dsplib/dsplib.cpp:
	* common/dsplib/Makefile.am:
	* Jeskola/Ninja/Ninja.cpp:
	  Readd dsplib. Statically link it to Ninja.

2008-06-03  Krzysztof Foltman  <kfoltman@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Vegetable.cpp:
	* FSM/dspchips/DSPChips.h:
	  Fix Infector crash bug, add assertion to check if waves were built
	  at all.

2008-05-11  Stefan Kost  <ensonic@users.sf.net>

	* Ensonic/CallbackTester/CallbackTester.cpp:
	* Ensonic/CallbackTester/Makefile.am:
	* Ensonic/Makefile.am:
	* Makefile.am:
	* configure.ac:
	  Add test plugin.

	* FSM/Kick/Makefile.am:
	  Fix Makefile
	
	* common/bw.h:
	* common/dsplib.h:
	* common/resample.h:
	  Add more sdk files.

2008-03-21  Stefan Kost  <ensonic@users.sf.net>

	* FSM/PhatMan/Chorus.cpp:
	* FSM/dspchips/DSPChips.h:
	  Use rint() on linux. Revert the changer where I commented f2i out.
	  Add some comments.

2008-03-20  Krzysztof Foltman <wdev@foltman.com>

	* FSM/PhatMan/Chorus.cpp:
	* FSM/dspchips/DSPChips.h:
	  Attempt at making PhatMan actually work as expected.

2008-03-13  Stefan Kost  <ensonic@users.sf.net>

	* FSM/PhatMan/Chorus.cpp:
	  Copy result data back.

	* common/mdk/mdk.h:
	  Formatting.

2008-03-12  Stefan Kost  <ensonic@users.sf.net>

	* FSM/PhatMan/Chorus.cpp:
	* common/mdk/mdkimp.cpp:
	  Get the mdk from host.

2008-03-12  Stefan Kost  <ensonic@users.sf.net>

	* FSM/PhatMan/Chorus.cpp: